Menu kategorie - do poprawy

--- a/kobiety.html
+++ b/kobiety.html
@@ -41,6 +41,18 @@
       </nav>
       <h1>Dla kobiet</h1>
 
+      <div class="dropdown" style="margin: 5px">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Kategorie
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="dol.html">Ubrania na dół</a>
+          <a class="dropdown-item" href="gora.html">Ubrania na górę</a>
+          <a class="dropdown-item" href="oubwie.html">Obuwie</a>
+        </div>
+      </div>
+   
+
       <section style="background-color: #eee;">
         <div class="container py-5">
           <h4 class="text-center mb-5"><strong>Bestsellery</strong></h4>
@@ -152,6 +164,7 @@
           </div>
         </div>
       </section>
+
 
 </body>
 </html>
