--- a/mezczyzni.html
+++ b/mezczyzni.html
@@ -42,6 +42,18 @@
         </div>
       </nav>
       <h1>Dla męzczyzn</h1>
+      
+      <div class="dropdown" style="margin: 5px">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Kategorie
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="dol.html">Ubrania na dół</a>
+          <a class="dropdown-item" href="gora.html">Ubrania na górę</a>
+          <a class="dropdown-item" href="oubwie.html">Obuwie</a>
+        </div>
+      </div>
+
       <section style="background-color: #eee;">
         <div class="container py-5">
           <h4 class="text-center mb-5"><strong>Bestsellery</strong></h4>
